--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-click==6.7
-Flask==0.12.2
-Flask-SQLAlchemy==2.3.2
-gunicorn==19.7.1
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-SQLAlchemy==1.2.5
-Werkzeug==0.14.1
-
+click==7.1.2
+Flask==1.1.2
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+psycopg2==2.8.5
+SQLAlchemy==1.3.17
+Werkzeug==1.0.1
+WTForms==2.3.1
